# Image-processing-cpp-OpenCL

./: .gitignore  CMakeLists.txt  main.cpp
include/: functions.hpp  kernels.cl
